--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -6,4 +6,4 @@
     - name: Include the role from the parent directory
       include_role: { name: "{{playbook_dir | dirname}}" }
       vars:
-        TODO: TODO
+        vbox_vms: [DebVM01]
