Use ansible_user_id instead of ansible_user

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,7 +22,7 @@
   ansible.builtin.copy:
     content: |
       default_policy = deny
-      {{ ansible_user }} = {
+      {{ ansible_user_id }} = {
         allow = true
         startup_delay = 10
       }
@@ -30,10 +30,10 @@
     mode: "0644"
 
 - name: Add the user to the vboxusers group
-  # Equivalent to "usermod -aG vboxusers {{ ansible_user }}"
+  # Equivalent to "usermod -aG vboxusers {{ ansible_user_id }}"
   become: true
   ansible.builtin.user:
-    name: "{{ ansible_user }}"
+    name: "{{ ansible_user_id }}"
     groups: [vboxusers] # It's important to use the "groups" parameter instead of "group"
     append: true
 
