--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
+# User to which the VirtualBox VMs belong
+vbox_autostart_user: mainuser
+
 # List of VirtualBox VMs that must be started at system boot
-vbox_vms: []
+vbox_autostart_vms: []
